# pluma-plugins

./: .editorconfig  .gitignore  README.md  TODO.md
duplicateline/: duplicateline.plugin  duplicateline.py
editorconfig/: _editorconfig.py  editorconfig.plugin  editorconfig_.py
gitbranchindicator/: gitbranchindicator.plugin  gitbranchindicator.py  utils.py
gotofile/: README.md  gotofile.plugin  org.mate.pluma.plugins.gotofile.gschema.xml
gotofile/gotofile/: __init__.py  popup.py  preferences.ui  providers.py  source.py
joinlines/: joinlines.plugin  joinlines.py
macro/: macro.plugin  macro.py
openuri/: meson.build  openuri.plugin.desktop.in.in  openuri.py
pastebin/: org.mate.pluma.plugins.pastebin.gschema.xml  pastebin.plugin
pastebin/pastebin/: __init__.py  pastebindialog.py  pastebindialog.ui  service.py
quickopen/: __init__.py.in  clean.sh  install.sh  meson.build  quickopen.plugin  quickopen.plugin.desktop.in.in  quickopen.py
quickopen/build-aux/meson/: post_install.py
quickopen/data/: meson.build  org.mate.pluma.plugins.quickopen.gschema.xml.in  quickopen.gresource.xml
quickopen/data/ui/: configurationbox.ui  configurevbox.ui  filechooserdialog.ui  helpdialog.ui
quickopen/help/: meson.build
quickopen/help/C/: index.page  quickopen.page
quickopen/src/: filechooserdialog.py  helpdialog.py  providers.py  utils.py
quickopen/src/ui/: filechooserdialog.py
restoreopenfiles/: org.mate.pluma.plugins.restoreopenfiles.gschema.xml  restoreopenfiles.plugin  restoreopenfiles.py
ripgrep/: __init__.py.in  meson.build  ripgrep.plugin.desktop.in.in
ripgrep/data/: meson.build  org.mate.pluma.plugins.ripgrep.gschema.xml.in  ripgrep.gresource.xml
ripgrep/data/ui/: searchdialog.ui
ripgrep/src/: resultspanel.py  searchdialog.py  utils.py
selectline/: selectline.plugin  selectline.py
togglepanel/: togglepanel.plugin  togglepanel.py
websearch/: configurationbox.ui  configurevbox.ui  org.mate.pluma.plugins.websearch.gschema.xml  preferences.ui  websearch.plugin  websearch.py
